test/e2e/features/services/tlsroute/testdata/cross-ns-no-refgrant-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend-svc
  ports:
    - protocol: TCP
      port: 443 
      targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-svc
  labels:
    app: backend-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-svc
  template:
    metadata:
      labels:
        app: backend-svc
    spec:
      containers:
        - image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          imagePullPolicy: IfNotPresent
          name: echo
          ports:
            - containerPort: 8443
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: backend-svc
            - name: HTTPS_PORT
              value: "8443"
            - name: TLS_SERVER_CERT
              value: /etc/server-certs/tls.crt
            - name: TLS_SERVER_PRIVKEY
              value: /etc/server-certs/tls.key
          volumeMounts:
            - name: server-certs
              mountPath: /etc/server-certs
              readOnly: true
      volumes:
        - name: server-certs
          secret:
            secretName: tls-secret
