test/e2e/features/services/tlsroute/testdata/cross-ns-tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: tls-route
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: backend-svc
          namespace: cross-namespace-allowed-backend-ns
          port: 443
