test/e2e/features/services/tlsroute/testdata/multi-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-svc-1
  labels:
    app: multi-svc
spec:
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 8443
  selector:
    app: backend-1
---
apiVersion: v1
kind: Service
metadata:
  name: multi-svc-2
  labels:
    app: multi-svc
spec:
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 8443
  selector:
    app: backend-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-1
  namespace: multi-tls-route
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-1
      version: v1
  template:
    metadata:
      labels:
        app: backend-1
        version: v1
    spec:
      containers:
        - image: registry.k8s.io/gateway-api/echo-basic:v1.5.0@sha256:fcbdfab85b3c4441e2fe8fdedd382904332ccb8253a5d51f6006c16903e7ae40
          imagePullPolicy: IfNotPresent
          name: backend-1
          ports:
            - containerPort: 8443
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: multi-svc-1
            - name: HTTPS_PORT
              value: "8443"
            - name: TLS_SERVER_CERT
              value: /etc/server-certs/tls.crt
            - name: TLS_SERVER_PRIVKEY
              value: /etc/server-certs/tls.key
          volumeMounts:
          - name: server-certs
            mountPath: /etc/server-certs
            readOnly: true
      volumes:
        - name: server-certs
          secret:
            secretName: tls-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-2
  namespace: multi-tls-route
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-2
      version: v1
  template:
    metadata:
      labels:
        app: backend-2
        version: v1
    spec:
      containers:
        - image: registry.k8s.io/gateway-api/echo-basic:v1.5.0@sha256:fcbdfab85b3c4441e2fe8fdedd382904332ccb8253a5d51f6006c16903e7ae40
          imagePullPolicy: IfNotPresent
          name: backend-2
          ports:
            - containerPort: 8443
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: multi-svc-2
            - name: HTTPS_PORT
              value: "8443"
            - name: TLS_SERVER_CERT
              value: /etc/server-certs/tls.crt
            - name: TLS_SERVER_PRIVKEY
              value: /etc/server-certs/tls.key
          volumeMounts:
          - name: server-certs
            mountPath: /etc/server-certs
            readOnly: true
      volumes:
        - name: server-certs
          secret:
            secretName: tls-secret
