test/e2e/features/services/tlsroute/testdata/single-tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: single-tls-route
spec:
  parentRefs:
    - name: single-tls-gateway
      sectionName: listener-443
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: single-svc
          port: 443
